[gd_scene load_steps=5 format=3 uid="uid://b5buxwmx7l05o"]

[ext_resource type="Script" path="res://scenes/pickups/bomb/bomb.gd" id="1_etvvm"]
[ext_resource type="Texture2D" uid="uid://sms0ycrmwra7" path="res://2d/pickups/bomb.png" id="2_7bxrl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1mgfc"]
radius = 8.0

[sub_resource type="SpriteFrames" id="SpriteFrames_q08yl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7bxrl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Bomb" type="Node2D"]
z_index = 4
script = ExtResource("1_etvvm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1mgfc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q08yl")

[node name="LifespanTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="WarningTimer" type="Timer" parent="."]
wait_time = 58.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="LifespanTimer" to="." method="_on_lifespan_timer_timeout"]
[connection signal="timeout" from="WarningTimer" to="." method="_on_warning_timer_timeout"]
